fix header position, shift main content to accomodate change

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,6 +5,10 @@
   border-bottom: 1px solid white;
   padding-right: 20px 5px;
   height: 54px;
+  background-color: #36465D;
+  width: 100%;
+  z-index: 1000;
+  position: fixed;
 }
 
 .header-item {
