--- a/app/assets/stylesheets/user_index.scss
+++ b/app/assets/stylesheets/user_index.scss
@@ -1,5 +1,5 @@
 .main-content {
-  margin-top: 40px;
+  margin-top: 90px;
   display: flex;
   width: 80%;
   justify-content: center;
